[package]
name = "turn_relay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
futures = "0.3.31"
iced = { version = "0.13.1", features = ['tokio'] }
tokio = { version = "1.47.1", features = ['full'] }
tokio-stream = { version = "0.1.17", features = ['full'] }
tokio-util = { version = "0.7.16", features = ['full'] }
turnclient = "0.5.0"

[profile.release]
lto = true
opt-level = 2
