[package]
name = "turn_relay"
version = "0.1.0"
description = "Multi-peer, UDP Relay over TURN"
repository = "https://github.com/esdmr/turn-relay"
keywords = ["stun", "turn", "rfc5766", "nat", "relay"]
categories = ["network-programming"]
authors = ["Saeed M Rad"]
license = "MIT"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
futures = { version = "0.3.31", default-features = false, features = ['std']}
iced = { version = "0.13.1", default-features = false, features = ['tiny-skia', 'tokio'] }
tokio = { version = "1.47.1", default-features = false, features = ['macros']}
tokio-util = { version = "0.7.16", default-features = false, features = ['codec', 'net']}
turnclient = "0.5.0"

[profile.release]
lto = true
opt-level = 3

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

module_name_repetitions = "allow"
future_not_send = "allow"
multiple_crate_versions = "allow"
